fixed an alignment issue for home

--- a/public/styles.css
+++ b/public/styles.css
@@ -87,7 +87,9 @@
 	font-family:Arial;
 	font-size:15px;
 	font-weight:bold;
-	padding:6px 24px;
+  padding:6px 24px;
+  margin-left:17em;
+  margin-top:1em;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #ced9bf;
 }
